crates/bin/docs_rs_web/templates/style/style.scss
/* ... */
pre {
    font-size: 0.9rem;
    overflow: auto;
    white-space: pre;
}

div.container {
    max-width: 1160px;
    text-align: left;

    img {
        max-width: 100%;
        margin: 5px 0;
    }
}

ul.aligned-icons .fa {
    width: 1.5em;
    display: inline-flex;
}

ul.aligned-icons .fa::before {
    margin: 0 auto;
}

body.centered div.container {
    margin: 0 auto;
}

div.landing {
    text-align: center;
    padding-top: 30px;
    padding-bottom: 60px;

    h1.brand {
        font-size: 3em;
        margin: 20px 0 10px 0;
        padding-bottom: 6px;
        color: var(--color-brand);
    }

    form.landing-search-form {
        max-width: 500px;
        margin: 0 auto;
        padding: 0.4em 1em;

        div.buttons {
            margin-top: 30px;
        }
    }

    input#search {
        margin: 0;
    }
}

#search-select-nav {
    display: flex;
    flex-direction: column;
    padding: 1em $search-result-right-left-padding;

    .item-end {
        align-self: flex-end
    }
}

div.recent-releases-container {
    text-align: left;
    padding-bottom: 50px;

    ul,
    li {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }

    h4 {
        margin-left: 14px;
        margin-right: 14px;
    }

    .queue-list li, .rebuild-queue-list li {
        list-style-type: decimal;
        margin-left: 20px;

        a {
            color: var(--color-url);
        }
    }
    
    .about p {
        margin-left: 20px;
    }

    strong {
        font-weight: 500;
    }

    pre {
        white-space: pre-wrap;
        background-color: var(--background-color);
    }

    .release, .build-in-progress {
        display: block;
        border-bottom: 1px solid var(--color-border);
        padding: 0.4em $search-result-right-left-padding;
        color: var(--color-standard);

        a:not(.normal) {
            color: var(--color-standard)
        }

        @media #{$media-lg} {
            padding: 0.4em 0;
            margin: 0 1em;
        }
    }

    .build-info {
        margin: 1em;
    }

    .release:hover,
    a.release:focus,
    .build-in-progress:hover {
        background-color: var(--color-background-code);
    }

    li:last-of-type .release,
    li:last-of-type .build-in-progress {
        border-bottom: none;
    }

    .name {
        color: var(--color-url);
        font-weight: 500;
        white-space: nowrap;
        margin: 0;

        &:hover {
            background-color: transparent;
            overflow: visible;
            white-space: normal;
            word-break: break-word;
        }

        &::before {
            display: none;
        }

        @media #{$media-sm} {
            text-overflow: ellipsis;
            overflow: hidden;
        }
    }

    .name.not-available {
        color: var(--color-standard);
    }

    .build {
        font-weight: 500;

        span.fa-check {
            color: var(--color-macro);
        }
        span.fa-times {
            color: var(--color-struct);
        }
        span.fa-xmark {
            color: red;
        }
    }

    .description {
        font-family: $font-family-serif;
        font-weight: normal;

        @media #{$media-sm} {
            font-size: 1em;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }

    .description:hover {
        @media #{$media-sm} {
            overflow: visible;
            white-space: normal;
        }
    }

    .date,
    .duration,
    .memory {
        font-weight: normal;

        @media #{$media-sm} {
            text-align: right;
        }
    }

    .memory {
        @media #{$media-sm} {
            padding-left: 1em;
            white-space: nowrap;
        }
    }

    div.pagination {
        text-align: center;
        margin: 1em;

        .pure-button {
            margin: 0;
        }
    }

    h4 {
        border-bottom-color: var(--color-border) !important;
    }

    .yanked {
      color: var(--color-warn-msg);
      background-color: var(--color-warn-background);
      padding: .2em .8em .2em .5em;
      border-radius: 1em;
    }

    table {
        margin: 1.5em 1em;
        --table-border: 1px solid var(--color-border);
        border-radius: 4px;

        border-spacing: 0;
        border-collapse: separate;
        border: var(--table-border);
        overflow: hidden;

        a {
            color: var(--color-url);
        }
    }

    th, td {
        padding: 4px 1em;
        font-weight: 300;
        text-align: center;
    }

    th {
        border-bottom: var(--table-border);
    }

    /* All this code is to have rounded borders on the table */
    table th:not(:last-child),
    table td:not(:last-child) {
        border-right: var(--table-border);
    }

    table thead>tr:not(:last-child)>th,
    table thead>tr:not(:last-child)>td,
    table tbody>tr:not(:last-child)>th,
    table tbody>tr:not(:last-child)>td,
    table tr:not(:last-child)>td,
    table tr:not(:last-child)>th,
    table thead:not(:last-child),
    table tbody:not(:last-child) {
        border-bottom: var(--table-border);
    }
}
/* ... */

